# se-toolkit-lab-8

./: REPORT.md
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
lab/tasks/required/: task-1.md
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __main__.py  server.py
nanobot/: entrypoint.py
nanobot/workspace/skills/observability/: SKILL.md
